--- a/colab_notebooks/04_TrainImagesAlreadyTransformedVGG.ipynb
+++ b/colab_notebooks/04_TrainImagesAlreadyTransformedVGG.ipynb
@@ -1144,7 +1144,10 @@
       "source": [
         "vgg_net = torch.hub.load('pytorch/vision:v0.6.0', 'vgg19', pretrained=True)\r\n",
         " \r\n",
+        "# Only the convolutional part is considered\r\n",
         "features = vgg_net.features\r\n",
+        "# The last maxpool layer is removed\r\n",
+        "features = nn.Sequential(*list(features.children())[:-1])\r\n",
         "features = features.to(device)\r\n",
         "\r\n",
         "criterionvgg = nn.L1Loss().to(device)"
